style.css
:root {
    --grass-colour: #006000;
}

* {
    box-sizing: border-box;
    user-select: none;
    transition: all 0.2s ease-in-out;

    &:disabled {
        cursor: not-allowed;
    }

    .hidden {
        display: none !important;
    }
}

body {
    background-color: #112233;
    font-family: 'Roboto', Arial, sans-serif;
    font-weight: bold;
    font-size: 16px;
    color: #ffffff;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100svh;
    overflow: hidden;
    overscroll-behavior: none;
}

body.raceMode {
    #stadiumContainer {
        grid-area: 1 / 2 / 3 / 4 !important;
    }

    .garageContainer,
    .neuralNetworkContainer {
        opacity: 0;
        position: relative;
        translate: 375px 0;
        pointer-events: none;
    }

    .naturalSelectionContainer {

        .inputControlContainer>.option:not(:has(#tickLimit)),
        .statusBoard {
            opacity: 0;
            translate: -100px 0;
            pointer-events: none;
        }
    }

    .miscellaneousContainer {
        grid-area: 1 / 4 / 3 / 5 !important;
    }
}

input:invalid,
input:user-invalid {
    background-color: #ff0000a0 !important;
}

.button {
    border: 1px solid var(--buttonColour);
    color: #ffffff;
    background-color: #ffffff20;
    font-weight: bold;
    padding: 3px 8px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    cursor: pointer;

    &:hover {
        background-color: var(--buttonColour);
        color: #000000;
    }
}

.outline {
    border-radius: 10px;
    outline: 2px solid #ffffff60;
}

#whatButton {
    --size: 60px;

    font-size: 40px;
    width: var(--size);
    height: var(--size);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    background-color: #ffffff20;
    color: #ffffff;
    border: 5px solid #ffffff;
    cursor: help;

    &:hover {
        background-color: #ffffff40;
    }
}

#mainContainer:not(:has(#whatButton:hover)) {
    & .whatText {
        display: none;
    }
}

.whatText {
    position: absolute;
    z-index: 99;
    font-size: 60px;
    background-color: #000000a0;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    text-align: center;

    translate: calc(var(--padding) * -1) calc(var(--padding) * -1);
}
/* ... */

